facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_null_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│null                │
╰────────────────────╯
╭After───────────────╮
│null                │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
