facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_number_vs_float_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before───────╮
│2.14         │
╰─────────────╯
╭After────────╮
│2.71         │
╰─────────────╯
╔Diff═════════╗
║2.14 → 2.71  ║
╚═════════════╝
