facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_object_field_added.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────╮
│{                       │
│  name: "Alice",        │
│}                       │
╰────────────────────────╯
╭After───────────────────╮
│{                       │
│  name: "Alice",        │
│  age: 30,              │
│}                       │
╰────────────────────────╯
╔Diff════════════════════╗
║{                       ║
║    .. 1 unchanged field║
║    + age: 30           ║
║}                       ║
╚════════════════════════╝
