facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_object_vs_struct_equal.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────╮
│{                   │
│  name: "Alice",    │
│  age: 30,          │
│}                   │
╰────────────────────╯
╭After───────────────╮
│OwnedUser {         │
│  name: "Alice",    │
│  age: 30,          │
│}                   │
╰────────────────────╯
╔Diff════════════════╗
║(structurally equal)║
╚════════════════════╝
