facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_object_vs_value_object_nested_change.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────────────────╮
│{                           │
│  user: {                   │
│    name: "Alice",          │
│    age: 30,                │
│  },                        │
│}                           │
╰────────────────────────────╯
╭After───────────────────────╮
│{                           │
│  user: {                   │
│    name: "Alice",          │
│    age: 31,                │
│  },                        │
│}                           │
╰────────────────────────────╯
╔Diff════════════════════════╗
║{                           ║
║    user: {                 ║
║        .. 1 unchanged field║
║        age: 30 → 31        ║
║    }                       ║
║}                           ║
╚════════════════════════════╝
