facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_vs_some.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────╮
│42             │
╰───────────────╯
╭After──────────╮
│Some(42)       │
╰───────────────╯
╔Diff═══════════╗
║42 → Some(42)  ║
╚═══════════════╝
