facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_value_vs_some_different.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before──────────╮
│42              │
╰────────────────╯
╭After───────────╮
│Some(100)       │
╰────────────────╯
╔Diff════════════╗
║42 → Some(100)  ║
╚════════════════╝
