facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_vec_of_structs.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────╮
│Vec<User> [            │
│  User {               │
│    name: "Alice",     │
│    age: 30,           │
│  },                   │
│  User {               │
│    name: "Bob",       │
│    age: 25,           │
│  },                   │
│]                      │
╰───────────────────────╯
╭After──────────────────╮
│Vec<User> [            │
│  User {               │
│    name: "Alice",     │
│    age: 31,           │
│  },                   │
│  User {               │
│    name: "Bob",       │
│    age: 25,           │
│  },                   │
│]                      │
╰───────────────────────╯
╔Diff═══════════════════╗
║[                      ║
║    User {             ║
║      name: "Alice",   ║
║      age: 30,         ║
║    } → User {         ║
║      name: "Alice",   ║
║      age: 31,         ║
║    }                  ║
║    .. 1 unchanged item║
║]                      ║
╚═══════════════════════╝
