facet-diff/tests/integration/snapshots/main__integration__diff_snapshots__diff_vec_of_values.snap
---
source: facet-diff/tests/diff_snapshots.rs
expression: "format_diff_comparison(&a, &b)"
---
╭Before─────────────────╮
│Vec<Value> [1, 2, 3]   │
╰───────────────────────╯
╭After──────────────────╮
│Vec<Value> [1, 20, 3]  │
╰───────────────────────╯
╔Diff═══════════════════╗
║[                      ║
║    - 1                ║
║    - 2                ║
║    + 1                ║
║    + 20               ║
║    .. 1 unchanged item║
║]                      ║
╚═══════════════════════╝
